<resources>
    <string name="app_name">RigEditor</string>
    <string name="imageTip">photo</string>
    <string name="action_settings">Settings</string>
    <string name="createButtonValue">Valider</string>
    <string name="rigNameHint">Nom</string>
    <string name="typeLabelText">Type</string>
    <string name="brandHint">Marque</string>
    <string name="modelHint">Model</string>
    <string name="addElementButtonText">Ajouter</string>
    <string name="saveButtonText">Sauver</string>

    <!-- Menu drawer -->
    <string-array name="menu_items">
        <item>Accueil</item>
        <item>Nouveau</item>
        <item>Edition</item>
    </string-array>
</resources>
