<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alex.rigeditor.EditRig">

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/typeListe"
        android:entries="@array/spinnerItems"
        android:layout_below="@+id/textType"
        android:layout_alignEnd="@+id/elementsList"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeLabelText"
        android:id="@+id/textType"

        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/elementsList"
        android:layout_below="@+id/addElementButton"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/brandText"
        android:hint="@string/brandHint"
        android:layout_below="@+id/typeListe"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/typeListe" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modelText"
        android:hint="@string/modelHint"
        android:layout_below="@+id/brandText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/brandText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addElementButtonText"
        android:id="@+id/addElementButton"
        android:layout_below="@+id/modelText"
        android:layout_alignEnd="@+id/modelText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButtonText"
        android:id="@+id/saveButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
